k8s/data_layer_d.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datalayer
  labels:
    name: datalayer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datalayer
  template:
    metadata:
      labels:
        app: datalayer
    spec:
      containers:
      - name: datalayer
        image: localhost:5000/datalayer
      restartPolicy: Always
