k8s/ml_layer_d.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mllayer
  labels:
    name: mllayer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mllayer
  template:
    metadata:
      labels:
        app: mllayer
    spec:
      containers:
      - name: mllayer
        image: localhost:5000/mllayer
      restartPolicy: Always
