k8s/utility_layer_d.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: utilitylayer
  labels:
    name: utilitylayer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: utilitylayer
  template:
    metadata:
      labels:
        app: utilitylayer
    spec:
      containers:
      - name: utilitylayer
        image: localhost:5000/utilitylayer
      restartPolicy: Always
