k8s/client_layer_s.yml
apiVersion: v1
kind: Service
metadata:
  name: clientlayer
  labels:
    service: clientlayer
spec:
  selector:
    app: clientlayer
  ports:
  - port: 8501
    targetPort: 8501
