k8s/data_layer_s.yml
apiVersion: v1
kind: Service
metadata:
  name: datalayer
  labels:
    service: datalayer
spec:
  selector:
    app: datalayer
  ports:
  - port: 8001
    targetPort: 8001
