k8s/ml_layer_s.yaml
apiVersion: v1
kind: Service
metadata:
  name: mllayer
  labels:
    service: mllayer
spec:
  selector:
    app: mllayer
  ports:
  - port: 8002
    targetPort: 8002
