k8s/optimization_layer_s.yml
apiVersion: v1
kind: Service
metadata:
  name: optimizationlayer
  labels:
    service: optimizationlayer
spec:
  selector:
    app: optimizationlayer
  ports:
  - port: 8003
    targetPort: 8003
