k8s/utility_layer_s.yml
apiVersion: v1
kind: Service
metadata:
  name: utilitylayer
  labels:
    service: utilitylayer
spec:
  selector:
    app: utilitylayer
  ports:
  - port: 8004
    targetPort: 8004
