k8s/minikube-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
spec:
  rules:
  - host: hello.world
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clientlayer
            port:
              number: 8501
      - path: /application
        pathType: Prefix
        backend:
          service:
            name: applicationlayer
            port:
              number: 8000
      - path: /data
        pathType: Prefix
        backend:
          service:
            name: datalayer
            port:
              number: 8001
      - path: /ml
        pathType: Prefix
        backend:
          service:
            name: mllayer
            port:
              number: 8002
      - path: /optimization
        pathType: Prefix
        backend:
          service:
            name: optimizationlayer
            port:
              number: 8003
      - path: /utility
        pathType: Prefix
        backend:
          service:
            name: utilitylayer
            port:
              number: 8004
